Debug log switch added to config.inc.php

--- a/config.inc.php.dist
+++ b/config.inc.php.dist
@@ -62,4 +62,7 @@
 
  // Log attempted passwords (could be insecure, disabled by default)
  $rcmail_config['defense_log_pwd'] = false;
+ 
+ // Enable debug log to logs/defense.log
+ $rcmail_config['defense_debug_enabled'] = false;
 ?>
